@@ -1,6 +1,7 @@
 Ver.1.1.0 (netctl-1.7 update):
 + [gui] added frequency
-* [gui] changed definition if profile is enabled
++ [plasmoid] added menu title
+* [gui] changed definition if profile is enabled]
 * [dataengine] changed definition if profile is enabled
 
 Ver.1.0.6:
